@@ -52,7 +52,7 @@ set (CORE_PKG
   glib-2.0>=2.32
   gio-2.0
   json-glib-1.0
-  webkit2gtk-4.0>=2.6.2
+  webkit2gtk-4.0>=2.6.1
   libxml-2.0
   gdk-x11-3.0
   gstreamer-video-1.0
