@@ -3,7 +3,7 @@ Section: net
 Priority: extra
 Maintainer: Sergey Peshkov <stub@mail.com>
 Build-Depends: debhelper (>=9), libwebkit2gtk-4.0-dev (>=2.6.1), libwebkit2gtk-4.0-37 (>=2.6.1), libgstreamer-plugins-base1.0-dev, libsoup2.4-dev, libjson-glib-dev,libxml2-dev, libnotify-dev, libgee-0.8-dev 
-Standards-Version: 0.1
+Standards-Version: 0.1.1
 Homepage: <don't have one>
 
 Package: photostream
