@@ -42,7 +42,7 @@ public class PhotoStream.Widgets.CommentBox : Gtk.Box
 		this.textLabel.set_line_wrap_mode(Pango.WrapMode.WORD_CHAR);
 		//this.textLabel.set_max_width_chars(40);
 		this.textLabel.set_justify(Gtk.Justification.LEFT);
-		this.textLabel.set_halign(Gtk.Align.START);
+		this.textLabel.set_halign(Gtk.Align.FILL);
 		this.textLabel.set_valign(Gtk.Align.START);
 		this.textLabel.xalign = 0;
 
@@ -103,8 +103,7 @@ public class PhotoStream.Widgets.CommentBox : Gtk.Box
 		this.add(textAlignment);
 		if (PhotoStream.App.selfUser.id == comment.user.id)
 			this.pack_end(removeCommentButton, false, true);
-		this.set_size_request(625, -1);
-
+			
 		this.show_all();		
 
 		this.realize.connect(() => {
